# id-scan-demo

./: .gitignore  README.md  pyproject.toml
app/: document_types.py  main.py  pipeline.py  quality.py  schemas.py  storage.py
app/static/: admin.js  capture.js  manifest.webmanifest  qa.js  style.css  sw.js
app/steps/: detect.py  enhance.py  glare.py
app/templates/: admin.html  capture.html  qa.html
demo/: streamlit_app.py
docs/: mobile-verification-checklist.md
samples/: README.md
src/id_scan_demo/: __init__.py
tests/: conftest.py  test_detect.py  test_enhance.py  test_glare.py  test_quality.py  test_service_api.py
